--- a/src/main/resources/static/html/editForm.html
+++ b/src/main/resources/static/html/editForm.html
@@ -22,7 +22,7 @@ max-width: 560px;
     </div>
     <div>
       <label for="itemName">상품명</label>
-      <input type="text" id="itemName" name="itemName" class="formcontrol"
+      <input type="text" id="itemName" name="itemName" class="form-control"
              value="상품A">
     </div>
     <div>
@@ -32,7 +32,7 @@ max-width: 560px;
     </div>
     <div>
       <label for="quantity">수량</label>
-      <input type="text" id="quantity" name="quantity" class="formcontrol"
+      <input type="text" id="quantity" name="quantity" class="form-control"
              value="10">
     </div>
     <hr class="my-4">
